# MultiMSDcorpus

./: .gitignore  README.md  main.py  pyproject.toml  run.sh  run_rag.sh
scripts/alignment/: auto_alignment.py
scripts/collection/: get_multidata.py
scripts/preprocess/: file_concat.py  file_concat_base.py  preprocess.sh
scripts/sentence_split/: sentence_split_en.py  sentence_split_rag_en.py
